@@ -8,6 +8,9 @@ Date=2016-03-07T10:13:00
 Comments= <<EOT
 - Add BNF for extended patterns.
 - Expand scripts/synopsis.pl to effectivly run tests.
+- Create a simplistic t/test.t.
+- Rename as_string() to _string2re().
+- Add new as_string().
 EOT
 
 [V 0.01]
